--- a/locale/en/blog/release/v4.0.0.md
+++ b/locale/en/blog/release/v4.0.0.md
@@ -7,11 +7,25 @@ slug: node-v4-0-0-stable
 layout: blog-post.hbs
 ---
 
-## 2015-09-08, Version 4.0.0 (Stable), @rvagg
+The collaborators of the Node.js project and the members of the Node.js Foundation are proud to offer v4.0.0 for general release. This release represents countless hours of hard work encapsulated in both the Node.js project and the io.js project that are now combined in a single codebase. The Node.js project is now operated by a team of 29 collaborators with additional 15 members forming its Technical Steering Committee. Further, over 100 new individuals have been added to the list of people contributing code to core since v0.12.7.
+
+Node.js v4.0.0 contains V8 v4.5, the same version of V8 shipping with the Chrome web browser today. This brings with it many bonuses for Node.js users, most notably a raft of new [ES6](https://nodejs.org/en/docs/es6/) features that are enabled by default including block scoping, classes, typed arrays, generators, Promises, Symbols, template strings, collections (Map, Set, etc.) and, new to V8 v4.5, arrow functions.
+
+Node.js v4 also brings a plan for [long-term support (LTS)](https://github.com/nodejs/LTS/) and a regular release cycle. Release versioning now follows [SemVer](http://semver.org/), so expect increments of both minor and patch version over the coming weeks as we fix bugs and add features. What we won't be doing within the v4.x branch is adding breaking changes.
+
+However, we have mapped a quick initial path to our first LTS version which will come in October. At the same time, a new v5.x branch will be cut and we will begin making a new series of Stable releases available, starting with v5.0.0. These will likely contain a new version of V8 and any breaking changes that may be necessary. The v4.x line of releases will continue for an additional 18 months in LTS, with a focus on stability and security and no unnecessary additions in functionality. Beyond that, v4.x will move in to Maintenance for an additional 12 months where it will continue to receive attention for critical bugs and security fixes.
+
+In parallel, we will be releasing a new Stable line of releases every 6 months, one in October and one in April each year. Every second one of these, the April release, will continue life in LTS form by the time October comes around. This means that there will be overlapping LTS branches being maintained throughout the year, each receiving attention for a total of 30 months (LTS plus Maintenance). We believe that the Stable and LTS cycles provide the room for the project to continue its **innovation** and stay with the cutting-edge of JavaScript while also serving the need for **predictable long-term stability and security** demanded by the growing line-up of enterprise users proudly adopting Node.js as a key technology; some of who already count themselves as [members of the Node.js Foundation](https://nodejs.org/en/foundation/members/).
+
+As always with a major release, we don't expect the adoption of Node.js v4 to be painless. It will take time to adapt, particularly as compiled add-ons catch up with the new version of V8 (hint: see [NAN](https://github.com/nodejs/nan) for our official solution to the compatibility problem). Thankfully, the io.js v3.x series of releases have given many add-on authors a chance to prepare their code for Node.js v4, so much of the npm ecosystem is ready.
+
+An initial list of breaking changes between v0.12 and v4 can be found on the [LTS wiki](https://github.com/nodejs/LTS/wiki/Breaking-changes-between-v0.12-and-next-LTS-release), in the coming days we will continue to populate both this wiki and the [core wiki](https://github.com/nodejs/node/wiki) with documentation regarding the changes you should be aware of.
+
+Please file any bugs at our new home on GitHub, <https://github.com/nodejs/node>, and consider joining the growing crew of collaborators by contributing to core!
 
 ### Notable changes
 
-This list of changes is relative to the last io.js v3.x branch release, v3.3.0. Please see the list of notable changes in the v3.x, v2.x and v1.x releases for a more complete list of changes from 0.12.x. Note, that some changes in the v3.x series as well as major breaking changes in this release constitute changes required for full convergence of the Node.js and io.js projects.
+This list of changes is relative to the last io.js v3.x branch release, v3.3.0. Please see the list of notable changes in the v3.x, v2.x and v1.x releases compiled in unified [CHANGELOG](https://github.com/nodejs/node/blob/master/CHANGELOG.md) for a more complete list of changes from 0.12.x. Note, that some changes in the v3.x series as well as major breaking changes in this release constitute changes required for full convergence of the Node.js and io.js projects.
 
 * **child_process**: `ChildProcess.prototype.send()` and `process.send()` operate asynchronously across all platforms so an optional callback parameter has been introduced that will be invoked once the message has been sent, i.e. `.send(message[, sendHandle][, callback])` (Ben Noordhuis) [#2620](https://github.com/nodejs/node/pull/2620).
 * **node**: Rename "io.js" code to "Node.js" (cjihrig) [#2367](https://github.com/nodejs/node/pull/2367).
