minor copy edit

--- a/locale/en/blog/release/v4.0.0.md
+++ b/locale/en/blog/release/v4.0.0.md
@@ -19,7 +19,7 @@ However, we have mapped a quick initial path to our first LTS version which will
 
 In parallel, we will be releasing a new Stable line of releases every 6 months, one in October and one in April each year. Every second one of these, the April release, will continue life in LTS form by the time October comes around. This means that there will be overlapping LTS branches being maintained throughout the year, each receiving attention for a total of 30 months (LTS plus Maintenance). We believe that the Stable and LTS cycles provide the room for the project to continue its **innovation** and stay with the cutting-edge of JavaScript while also serving the need for **predictable long-term stability and security** demanded by the growing line-up of enterprise users proudly adopting Node.js as a key technology; some of who already count themselves as [members of the Node.js Foundation](https://nodejs.org/en/foundation/members/).
 
-As always with a major release, we don't expect the adoption of Node.js v4 to be painless. It will take time to adapt, particularly as compiled add-ons catch up with the new version of V8 (hint: see [NAN](https://github.com/nodejs/nan) for our official solution to the compatibility problem). Thankfully, the io.js v3.x series of releases have given many add-on authors a chance to prepare their code for Node.js v4, so much of the npm ecosystem is ready.
+As always with a major release, we don't expect the adoption of Node.js v4 to be painless. It will take time to adapt, particularly as compiled add-ons catch up with the new version of V8 (hint: see [NAN](https://github.com/nodejs/nan) for our official solution to the compatibility problem). Thankfully, the io.js v3.x series of releases have given many add-on authors a chance to prepare their code for Node.js v4, so much of the npm ecosystem is ready today.
 
 An initial list of breaking changes between v0.12 and v4 can be found on the [LTS wiki](https://github.com/nodejs/LTS/wiki/Breaking-changes-between-v0.12-and-next-LTS-release), in the coming days we will continue to populate both this wiki and the [core wiki](https://github.com/nodejs/node/wiki) with documentation regarding the changes you should be aware of.
 
