added shasums for 4.0.0

--- a/locale/en/blog/release/v4.0.0.md
+++ b/locale/en/blog/release/v4.0.0.md
@@ -132,7 +132,7 @@ SunOS 32-bit Binary: http://nodejs.org/dist/v4.0.0/node-v4.0.0-sunos-x86.tar.gz
 
 SunOS 64-bit Binary: http://nodejs.org/dist/v4.0.0/node-v4.0.0-sunos-x64.tar.gz
 
-ARMv6 32-bit Binary: http://nodejs.org/dist/v4.0.0/node-v4.0.0-linux-armv6l.tar.gz
+ARMv6 32-bit Binary: _Coming soon_ <!-- http://nodejs.org/dist/v4.0.0/node-v4.0.0-linux-armv6l.tar.gz -->
 
 ARMv7 32-bit Binary: http://nodejs.org/dist/v4.0.0/node-v4.0.0-linux-armv7l.tar.gz
 
@@ -148,5 +148,43 @@ Documentation: http://nodejs.org/docs/v4.0.0/api/
 
 Shasums:
 ```
-{{shasums}}
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+4893cadaa55fe88b214371b23257d7fae4b30661ef01d352e3f930ba9d402ee0  node-v4.0.0-darwin-x64.tar.gz
+1f2b278d4708d7d956f2a17be139af26955114b92cb4340735a10bb5f0585c0a  node-v4.0.0-darwin-x64.tar.xz
+8812b88e81ee258f7f9446b548f6b364edcdd455f73f06589f14dd71dca415d0  node-v4.0.0-headers.tar.gz
+776962bd95bf295e336fbf04f0d8764bb9f6236e0c699358b17e4e2a95ee3d6f  node-v4.0.0-headers.tar.xz
+0436f107e1d82c61c3ee4f916781466a49bece74bf4d4fb4bf4d53a57b81df85  node-v4.0.0-linux-arm64.tar.gz
+7fdb978ddda803b188958b368db13b97dcaacfbf96d40c99d13ed385499d3fdd  node-v4.0.0-linux-arm64.tar.xz
+a788ed1b04de00344f4bbb8a278b317c69f9672f5fd03adb24f53d7c3d6fc8f6  node-v4.0.0-linux-armv7l.tar.gz
+1ed96526e87c29b4d3b5618b5d2e3e65e1aef6a5e40f90ec3a3afd21047517cf  node-v4.0.0-linux-armv7l.tar.xz
+df8ada31840e3dc48c7fe7291c7eba70b2ce5a6b6d959ac01157b04731c8a88f  node-v4.0.0-linux-x64.tar.gz
+cc4eae3e4c2dd8b068d69e6d1d9849a863c51e3ec3d7f85cfb1e91e63912b66a  node-v4.0.0-linux-x64.tar.xz
+444b0c2e38602699103e4adb76c9f15b76c405f58b1308751cdc194041a39b93  node-v4.0.0-linux-x86.tar.gz
+6fe4ab43eae74c1cb376169f4f161bddef04ff8a693a772875de651fafa4252b  node-v4.0.0-linux-x86.tar.xz
+387dd01caf168267749b0ddc7702b2fef7c95fbe1b2dab9a41ded02c11f16889  node-v4.0.0.pkg
+f17ea8b1ffa6d63ba4eaa37708a365e5aefdb7de136f8b1a5751f2f258507026  node-v4.0.0-sunos-x64.tar.gz
+69188f3568bbc9c071c70cf92551dd15e6fb79c9bd5d8b3da136ed65af4adea1  node-v4.0.0-sunos-x64.tar.xz
+4537640f912b1db217351271e15d092d4654ecbe7cdb0169313988de5e453cd3  node-v4.0.0-sunos-x86.tar.gz
+99ce4830b6b4f10dfca050296c001beb60e47d3eda455bc5b287b4ecc0773c04  node-v4.0.0-sunos-x86.tar.xz
+e110e5a066f3a6fe565ede7dd66f3727384b9b5c5fbf46f8db723d726e2f5900  node-v4.0.0.tar.gz
+2e3c5069933bead1022848009a68426a10689e67c4204707798fa319a6847bb5  node-v4.0.0.tar.xz
+28dfb26fddb3ff56456bfc0ec186db27e6b84d9ce98752f34d48758f4af05fbe  node-v4.0.0-x64.msi
+ba67b46504afeedfd43d0ebb51844e2b427d64b631fe05d6fc35f7fc59d05307  node-v4.0.0-x86.msi
+4c468e9a5e664f700f664fde42576260a7dd2bd5625ab824a713845e231f8275  win-x64/node.exe
+c8189c310c774ce3cbe960bd9920e49f47db97a19f1256b9b5bfa1f9d83d4dca  win-x64/node.lib
+02814e5fdddbf77840e14042e98de3b50e0c0167aa1a8cccdf3222e643dd016f  win-x86/node.exe
+1bbe7009ea25e3ffe72cc7da92725146536be698cefd960e0e22269d02368c25  win-x86/node.lib
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1
+
+iQEcBAEBAgAGBQJV7zGvAAoJEMJzeS99g1RdrTAH/1YZRX/Qu8qv7gddKF9IPKnt
+Y5quaKOljjLBuWSy4xH0MjaqQCn50nIXVcZxa63E2zbCOjMYUHlYi4qkzuEq5OGC
+RXP2VcBTRpnGs69gk6PM7A8JxmKJC9yT2His4jP2qaiwY5BxMR09+hADnCK4pL58
+UWUW5INFz8PnG+SDSTCmsKXN+k8/S7jpEaXGvaXMpvSvFJ7J0Q+R6XxlYzw/W7qM
+3uO2WUR3tr96QWwXrpMzgEbwLXXU9ini6pZAoQ4YxnZlVLstW7OOFC3stnLsIJ9Y
+jc9NkDEvDn0iEyXqMMwqlFwcooekNZaKol9jvYrpSehngQjyps6tmYUEeyzEUEk=
+=8Qp5
+-----END PGP SIGNATURE-----
 ```
