update 4.0 post for armv6

--- a/locale/en/blog/release/v4.0.0.md
+++ b/locale/en/blog/release/v4.0.0.md
@@ -132,7 +132,7 @@ SunOS 32-bit Binary: http://nodejs.org/dist/v4.0.0/node-v4.0.0-sunos-x86.tar.gz
 
 SunOS 64-bit Binary: http://nodejs.org/dist/v4.0.0/node-v4.0.0-sunos-x64.tar.gz
 
-ARMv6 32-bit Binary: _Coming soon_ <!-- http://nodejs.org/dist/v4.0.0/node-v4.0.0-linux-armv6l.tar.gz -->
+ARMv6 32-bit Binary: http://nodejs.org/dist/v4.0.0/node-v4.0.0-linux-armv6l.tar.gz
 
 ARMv7 32-bit Binary: http://nodejs.org/dist/v4.0.0/node-v4.0.0-linux-armv7l.tar.gz
 
@@ -148,15 +148,14 @@ Documentation: http://nodejs.org/docs/v4.0.0/api/
 
 Shasums:
 ```
------BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
-
 4893cadaa55fe88b214371b23257d7fae4b30661ef01d352e3f930ba9d402ee0  node-v4.0.0-darwin-x64.tar.gz
 1f2b278d4708d7d956f2a17be139af26955114b92cb4340735a10bb5f0585c0a  node-v4.0.0-darwin-x64.tar.xz
 8812b88e81ee258f7f9446b548f6b364edcdd455f73f06589f14dd71dca415d0  node-v4.0.0-headers.tar.gz
 776962bd95bf295e336fbf04f0d8764bb9f6236e0c699358b17e4e2a95ee3d6f  node-v4.0.0-headers.tar.xz
 0436f107e1d82c61c3ee4f916781466a49bece74bf4d4fb4bf4d53a57b81df85  node-v4.0.0-linux-arm64.tar.gz
 7fdb978ddda803b188958b368db13b97dcaacfbf96d40c99d13ed385499d3fdd  node-v4.0.0-linux-arm64.tar.xz
+6f88e532bbf55cff36d4940898b80359761de3a274cc214fbb58cc176ec49ba2  node-v4.0.0-linux-armv6l.tar.gz
+d7c1e9fefb360bde70c543d8981d2cce9a1c8444e847d19a89604756570d3075  node-v4.0.0-linux-armv6l.tar.xz
 a788ed1b04de00344f4bbb8a278b317c69f9672f5fd03adb24f53d7c3d6fc8f6  node-v4.0.0-linux-armv7l.tar.gz
 1ed96526e87c29b4d3b5618b5d2e3e65e1aef6a5e40f90ec3a3afd21047517cf  node-v4.0.0-linux-armv7l.tar.xz
 df8ada31840e3dc48c7fe7291c7eba70b2ce5a6b6d959ac01157b04731c8a88f  node-v4.0.0-linux-x64.tar.gz
@@ -179,12 +178,12 @@ c8189c310c774ce3cbe960bd9920e49f47db97a19f1256b9b5bfa1f9d83d4dca  win-x64/node.l
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJV7zGvAAoJEMJzeS99g1RdrTAH/1YZRX/Qu8qv7gddKF9IPKnt
-Y5quaKOljjLBuWSy4xH0MjaqQCn50nIXVcZxa63E2zbCOjMYUHlYi4qkzuEq5OGC
-RXP2VcBTRpnGs69gk6PM7A8JxmKJC9yT2His4jP2qaiwY5BxMR09+hADnCK4pL58
-UWUW5INFz8PnG+SDSTCmsKXN+k8/S7jpEaXGvaXMpvSvFJ7J0Q+R6XxlYzw/W7qM
-3uO2WUR3tr96QWwXrpMzgEbwLXXU9ini6pZAoQ4YxnZlVLstW7OOFC3stnLsIJ9Y
-jc9NkDEvDn0iEyXqMMwqlFwcooekNZaKol9jvYrpSehngQjyps6tmYUEeyzEUEk=
-=8Qp5
+iQEcBAEBAgAGBQJV71yWAAoJEMJzeS99g1RdcXkH/3sBJ89TZdqvzGEB/FZ5x+5C
+A4iAWfEa+RjSvJbtmo3noOUA7+OZPWVue6yEv3ZX4EEdk5ZIUEcf/4tYoW/D5cCm
+SBlnCB5TXMp8ZafCni3OvR52gBPIB4EFPlqPDLLA6wloUYm7xhyJ5V+Z9DeTzvGl
+CC6JDs0RkcqMT3799KBgrS/ud0G5BXCC1imnHxGUCgYc1BAcExHThbLs1zFyMuXg
+SSQJVJGoxR7LWfvnGFPnEbliSCuUfjGIT3DHAgovJgjQirj/vLssLBYyxMhCVBEa
+eR2+UlptmdbsIAsPvyNp2Tr466KlIawD99haYOfgmVnA1l1PWbAjJMdQZJPk+Mg=
+=tBAw
 -----END PGP SIGNATURE-----
 ```
