Fix PGP begin marker in v4.0.0 release post

--- a/locale/en/blog/release/v4.0.0.md
+++ b/locale/en/blog/release/v4.0.0.md
@@ -146,6 +146,9 @@ Documentation: http://nodejs.org/docs/v4.0.0/api/
 
 Shasums:
 ```
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 4893cadaa55fe88b214371b23257d7fae4b30661ef01d352e3f930ba9d402ee0  node-v4.0.0-darwin-x64.tar.gz
 1f2b278d4708d7d956f2a17be139af26955114b92cb4340735a10bb5f0585c0a  node-v4.0.0-darwin-x64.tar.xz
 8812b88e81ee258f7f9446b548f6b364edcdd455f73f06589f14dd71dca415d0  node-v4.0.0-headers.tar.gz
