Footer: Add "Report website issue" link

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -4,6 +4,7 @@
     "url": "https://new.nodejs.org/en/",
     "locale": "en",
     "scrollToTop": "Scroll to top",
+    "reportIssue": "Report website issue",
     "by": "by",
     "feeds": [
         {
