Footer: Add "Report Node.js issue" link

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -4,7 +4,8 @@
     "url": "https://new.nodejs.org/en/",
     "locale": "en",
     "scrollToTop": "Scroll to top",
-    "reportIssue": "Report website issue",
+    "reportNodeIssue": "Report Node.js issue",
+    "reportWebsiteIssue": "Report website issue",
     "by": "by",
     "feeds": [
         {
