RSS: Change links new.nodejs.org -> nodejs.org

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -1,7 +1,7 @@
 {
     "title": "Node.js",
     "author": "Node.js Foundation",
-    "url": "https://new.nodejs.org/en/",
+    "url": "https://nodejs.org/en/",
     "locale": "en",
     "scrollToTop": "Scroll to top",
     "reportNodeIssue": "Report Node.js issue",
