--- a/locale/en/blog/release/v4.0.0.md
+++ b/locale/en/blog/release/v4.0.0.md
@@ -116,35 +116,22 @@ See https://github.com/nodejs/node/labels/confirmed-bug for complete and current
 * [[`b630ebaf43`](https://github.com/nodejs/node/commit/b630ebaf43)] - **win,msi**: Upgrade from old upgrade code (João Reis) [#2439](https://github.com/nodejs/node/pull/2439)
 
 
-Windows 32-bit Installer: https://nodejs.org/dist/v4.0.0/node-v4.0.0-x86.msi
-
-Windows 64-bit Installer: https://nodejs.org/dist/v4.0.0/node-v4.0.0-x64.msi
-
-Mac OS X 64-bit Installer: https://nodejs.org/dist/v4.0.0/node-v4.0.0.pkg
-
-Mac OS X 64-bit Binary: https://nodejs.org/dist/v4.0.0/node-v4.0.0-darwin-x64.tar.gz
-
-Linux 32-bit Binary: https://nodejs.org/dist/v4.0.0/node-v4.0.0-linux-x86.tar.gz
-
-Linux 64-bit Binary: https://nodejs.org/dist/v4.0.0/node-v4.0.0-linux-x64.tar.gz
-
-SunOS 32-bit Binary: https://nodejs.org/dist/v4.0.0/node-v4.0.0-sunos-x86.tar.gz
-
-SunOS 64-bit Binary: https://nodejs.org/dist/v4.0.0/node-v4.0.0-sunos-x64.tar.gz
-
-ARMv6 32-bit Binary: https://nodejs.org/dist/v4.0.0/node-v4.0.0-linux-armv6l.tar.gz
-
-ARMv7 32-bit Binary: https://nodejs.org/dist/v4.0.0/node-v4.0.0-linux-armv7l.tar.gz
-
-ARMv8 64-bit Binary: https://nodejs.org/dist/v4.0.0/node-v4.0.0-linux-arm64.tar.gz
-
-Source Code: https://nodejs.org/dist/v4.0.0/node-v4.0.0.tar.gz
-
-Other release files: https://nodejs.org/dist/v4.0.0/
-
+Windows 32-bit Installer: https://nodejs.org/dist/v4.0.0/node-v4.0.0-x86.msi<br>
+Windows 64-bit Installer: https://nodejs.org/dist/v4.0.0/node-v4.0.0-x64.msi<br>
+Mac OS X 64-bit Installer: https://nodejs.org/dist/v4.0.0/node-v4.0.0.pkg<br>
+Mac OS X 64-bit Binary: https://nodejs.org/dist/v4.0.0/node-v4.0.0-darwin-x64.tar.gz<br>
+Linux 32-bit Binary: https://nodejs.org/dist/v4.0.0/node-v4.0.0-linux-x86.tar.gz<br>
+Linux 64-bit Binary: https://nodejs.org/dist/v4.0.0/node-v4.0.0-linux-x64.tar.gz<br>
+SunOS 32-bit Binary: https://nodejs.org/dist/v4.0.0/node-v4.0.0-sunos-x86.tar.gz<br>
+SunOS 64-bit Binary: https://nodejs.org/dist/v4.0.0/node-v4.0.0-sunos-x64.tar.gz<br>
+ARMv6 32-bit Binary: https://nodejs.org/dist/v4.0.0/node-v4.0.0-linux-armv6l.tar.gz<br>
+ARMv7 32-bit Binary: https://nodejs.org/dist/v4.0.0/node-v4.0.0-linux-armv7l.tar.gz<br>
+ARMv8 64-bit Binary: https://nodejs.org/dist/v4.0.0/node-v4.0.0-linux-arm64.tar.gz<br>
+Source Code: https://nodejs.org/dist/v4.0.0/node-v4.0.0.tar.gz<br>
+Other release files: https://nodejs.org/dist/v4.0.0/<br>
 Documentation: https://nodejs.org/docs/v4.0.0/api/
 
-Shasums:
+Shasums (GPG signing hash: SHA1, file hash: SHA256):
 ```
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
