--- a/locale/en/blog/release/v4.1.0.md
+++ b/locale/en/blog/release/v4.1.0.md
@@ -104,7 +104,7 @@ Linux 64-bit Binary: https://nodejs.org/dist/v4.1.0/node-v4.1.0-linux-x64.tar.gz
 SunOS 32-bit Binary: https://nodejs.org/dist/v4.1.0/node-v4.1.0-sunos-x86.tar.gz<br>
 SunOS 64-bit Binary: https://nodejs.org/dist/v4.1.0/node-v4.1.0-sunos-x64.tar.gz<br>
 ARMv6 32-bit Binary: https://nodejs.org/dist/v4.1.0/node-v4.1.0-linux-armv6l.tar.gz<br>
-ARMv7 32-bit Binary: https://nodejs.org/dist/v4.1.0/node-v4.1.0-linux-armv7l.tar.gz<br>
+ARMv7 32-bit Binary: https://nodejs.org/dist/v4.1.0/node-v4.1.0-linux-armv7.tar.gz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v4.1.0/node-v4.1.0-linux-arm64.tar.gz<br>
 Source Code: https://nodejs.org/dist/v4.1.0/node-v4.1.0.tar.gz<br>
 Other release files: https://nodejs.org/dist/v4.1.0/<br>
