added armv6 binaries

--- a/locale/en/blog/release/v4.1.1.md
+++ b/locale/en/blog/release/v4.1.1.md
@@ -72,7 +72,7 @@ Linux 32-bit Binary: https://nodejs.org/dist/v4.1.1/node-v4.1.1-linux-x86.tar.gz
 Linux 64-bit Binary: https://nodejs.org/dist/v4.1.1/node-v4.1.1-linux-x64.tar.gz<br>
 SunOS 32-bit Binary: https://nodejs.org/dist/v4.1.1/node-v4.1.1-sunos-x86.tar.gz<br>
 SunOS 64-bit Binary: https://nodejs.org/dist/v4.1.1/node-v4.1.1-sunos-x64.tar.gz<br>
-ARMv6 32-bit Binary: *Coming soon*<br>
+ARMv6 32-bit Binary: https://nodejs.org/dist/v4.1.1/node-v4.1.1-linux-armv6l.tar.gz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v4.1.1/node-v4.1.1-linux-armv7l.tar.gz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v4.1.1/node-v4.1.1-linux-arm64.tar.gz<br>
 Source Code: https://nodejs.org/dist/v4.1.1/node-v4.1.1.tar.gz<br>
@@ -90,6 +90,8 @@ d134614e78cfc406611e366c9618704a47c2ee1bf60f0a11909ba84d8b2a9e28  node-v4.1.1-he
 9edcf9fd5c79a3696faef185bc2e9ee51c709dda2381b1bc6deb49f240897e5d  node-v4.1.1-headers.tar.xz
 b2e1915a0c65dd9faee7f05a56792371958980e02d1f7cde447c8260bb805052  node-v4.1.1-linux-arm64.tar.gz
 63b4705f3ae5ee9f97b319dbc68463c12478fbcfc1bdf654f760a2e5bea565e8  node-v4.1.1-linux-arm64.tar.xz
+ca38cef96180916891a262bbb39f335eaa8de6c0c06933609f4f3d7bebdc94b5  node-v4.1.1-linux-armv6l.tar.gz
+06eff36b1f65b917ddedd2d6143d56ccc509518ac7cace6375011e2c5a40c226  node-v4.1.1-linux-armv6l.tar.xz
 2896f0ab7c53bb7b489a09f7344e059f898ae929c2a9bfb7dfce85a5846ab9d2  node-v4.1.1-linux-armv7l.tar.gz
 a88e19a3f6be90c7f93b890b3ef2e91f9563ab0b270f619b0fb78c773771c0af  node-v4.1.1-linux-armv7l.tar.xz
 f5f7e11a503c997486d50d8683741a554bdda1d1181125a05ac5844cb29d1572  node-v4.1.1-linux-x64.tar.gz
@@ -112,13 +114,13 @@ e2a6a441e26cd60043f7537552fd10a3f678bc9265af539256410c6da2a0e9b4  win-x86/node.l
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJWAgc8AAoJEMJzeS99g1RdkkAH/iEBp6mZKA143yNg6arWkFII
-PW93zu6BcpHFy7ZySjm+wY4BsB1GJJZIbEJhx/CwDbvrrmPhNDoo3E4l+bbGuweC
-DicIZ1sA7UaEflOK5Go+miIGodVYCNea2BsGLBwEVIoVzFzqBWzHN87v2NrUNFQD
-hnnr3EfTVZMEM/nJB8F9GCFBZsZpPk7eyIMiT2yFm7Z6PcDZ0ZU/NfH9Da7TH2Vx
-gkQKZv+dYLaPyCeoBNZRBaSwh28Wccyko+xjmKly9U7j/NigPYEvpmorEhGjZKHk
-9s7PKxuhNAJSNW/uNWp/EtWuy5Ar/uhbF6v7N/ZCC+Ntm739zqmR7l0+dvrRyZo=
-=Yk5k
+iQEcBAEBAgAGBQJWA1eGAAoJEMJzeS99g1Rd/uMH+wT/zvf2BLZjyd95XvmgZ3yx
+nCwZjGRLUfsMPd9Hk5x0D6Wpjq7hpIcN06W3ea6t7zgiZ/yCHBRfZ8KZHUkHP+Tm
+/yNQwpZajEIL1RGssx/Wm1VMB3sysAl3RZ665OtvpuBgQ0w6PKNqB+WJG8G/1GSd
+lB1sVYCq+CagjknPUMM+tYnxGDzSnJRcKdGI3DVvAu57AHdsYmuEfVxic2jRF1m+
+yB2ncABRXYqcELt6U293B82Lr3zBYUd8gcBd2VzgOUSmMZh0YlqgPKt2Ll5/fEnY
+fe3ditIQsQTiWtKzXr++Hd9iD2B+ppL3XBbiDByKFznIHg4BR61l8OuotHoL334=
+=Oh4x
 -----END PGP SIGNATURE-----
 
 ```
