Change io.js links to node
See https://github.com/nodejs/node/issues/2327.

- `github.com/iojs/io.js` to `github.com/nodejs/node`
- `github.comnodejs/io.js` to `github.com/nodejs/node`

--- a/locale/en/foundation/tsc/minutes/2015-05-07.md
+++ b/locale/en/foundation/tsc/minutes/2015-05-07.md
@@ -108,7 +108,7 @@ It shouldn't hold up the release, but it should be pretty safe and it fixes
 some annoying issues.
 
 ### Flaky tests support
-Alexis: io.js removed support for flaky tests. https://github.com/iojs/io.js/pull/812
+Alexis: io.js removed support for flaky tests. https://github.com/nodejs/node/pull/812
 It looks like this issue might be slightly controversial.
 I am guessing they thought it was a mechanism for ignoring test failures in
 general, while it is only meant to support the automatic merge in
