--- a/locale/en/foundation/tsc/minutes/2015-02-19.md
+++ b/locale/en/foundation/tsc/minutes/2015-02-19.md
@@ -82,7 +82,7 @@ make calling MakeCallback safe in every case.
 
 ### Security issue with shared OpenSSL
 
-See https://github.com/iojs/io.js/pull/800.
+See https://github.com/nodejs/node/pull/800.
 
 ### --abort-on-uncaught-exception and domains
 
