--- a/locale/en/foundation/tsc/minutes/2015-06-11.md
+++ b/locale/en/foundation/tsc/minutes/2015-06-11.md
@@ -27,8 +27,8 @@ Michael: Expect OpenSSL upgrade imminently. Just drop support for smaller size. 
 
 Michael: should also consider including:
 
-*  https://github.com/nodejs/io.js/pull/1739
-*  https://github.com/nodejs/io.js/pull/1831
+*  https://github.com/nodejs/node/pull/1739
+*  https://github.com/nodejs/node/pull/1831
 *  https://github.com/joyent/node/issues/25366  (checked and docs for io.js indicate modp1 is still there)
 
 Michael: Stewart on my team has volunteered to create a PR against Node.js to upgrade OpenSSL.
@@ -55,7 +55,7 @@ Please review and comment on issue.
 
 ### Debug port issues
 
-Colin working to fix https://github.com/nodejs/io.js/pull/1949 - new debug port for each worker.
+Colin working to fix https://github.com/nodejs/node/pull/1949 - new debug port for each worker.
 
 ### Windows installer changes
 
