updated v4.1.2 with armv6l binaries

--- a/locale/en/blog/release/v4.1.2.md
+++ b/locale/en/blog/release/v4.1.2.md
@@ -90,7 +90,7 @@ Linux 32-bit Binary: https://nodejs.org/dist/v4.1.2/node-v4.1.2-linux-x86.tar.gz
 Linux 64-bit Binary: https://nodejs.org/dist/v4.1.2/node-v4.1.2-linux-x64.tar.gz<br>
 SunOS 32-bit Binary: https://nodejs.org/dist/v4.1.2/node-v4.1.2-sunos-x86.tar.gz<br>
 SunOS 64-bit Binary: https://nodejs.org/dist/v4.1.2/node-v4.1.2-sunos-x64.tar.gz<br>
-ARMv6 32-bit Binary: *Coming soon*<br>
+ARMv6 32-bit Binary: https://nodejs.org/dist/v4.1.2/node-v4.1.2-linux-armv6l.tar.gz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v4.1.2/node-v4.1.2-linux-armv7l.tar.gz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v4.1.2/node-v4.1.2-linux-arm64.tar.gz<br>
 Source Code: https://nodejs.org/dist/v4.1.2/node-v4.1.2.tar.gz<br>
@@ -108,6 +108,8 @@ e8e17c8dc5afbf42d9533b37d32d7b44f105c425f13be4840c9e20cfcd251e78  node-v4.1.2-he
 33651643226584cc83753633a61ad83e02ba399537e428468b793e06f1f3a188  node-v4.1.2-headers.tar.xz
 ae74c245b9592d52f8632a249a0bdd2eb664dcf7aaf5089d061f9c5b051f101a  node-v4.1.2-linux-arm64.tar.gz
 5a805fb6e3f3650c2048ac4eafb7654df12b34f1bcc94bd58ad93fc015ded9da  node-v4.1.2-linux-arm64.tar.xz
+834b36fa7e397f27f63f8fd56b77c15de4d9297c23f70679d0ceabd83662d950  node-v4.1.2-linux-armv6l.tar.gz
+32f0958afef2ebeb390a10e9e5e12a99ddba41a8cd17ad26038a8b27fd2e26d1  node-v4.1.2-linux-armv6l.tar.xz
 a8e38b1fae35c9b13f0c8cc57991d20a0267603c820028290236508930a522b0  node-v4.1.2-linux-armv7l.tar.gz
 d1fccdbedd27ab77aed20861f2dc0dcefb91512f198957ef9574bfe8d9329a0e  node-v4.1.2-linux-armv7l.tar.xz
 c39aefac81a2a4b0ae12df495e7dcdf6a8b75cbfe3a6efb649c8a4daa3aebdb6  node-v4.1.2-linux-x64.tar.gz
@@ -130,13 +132,12 @@ e1fddb067d39edcbe187b3dfd276bb89cb5282d21f2eda7331b46005561ffa0f  win-x86/node.e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJWEtWkAAoJEMJzeS99g1Rd/nYIAMvs1gsXjgyy6u9Rv0uQJeW8
-wWXjfBfy/MzfBW37cJqaS6iwjAsKagwWrBbUIV1jQfiBVpqFZ9G4eKEmbmWjjiM5
-oTGBxas2BfGl1dj3/YHj0i3D3M7gMg9EAcLkbgWRW9uKTBAS4Wdakfg0j5FyHMIl
-iJjXK2ro2DPG9v6XLa4I25V+IWZLTiXuHAhPLPcsKQdizbXLPnQZ0y1R4U7UjySS
-4rF0OFT/oGH2j+KNGHz1OJImxyDVKTcnWIS4SaHDzSHRrsiTJ9HSjBNr4lDwhkJe
-0f1Nb2z45QxfPgemGls6fNHTIrIA3Jg2v1xwJbhHbgv6o1agzzmzRGOvCo7m9ng=
-=2lyE
+iQEcBAEBAgAGBQJWEu1KAAoJEMJzeS99g1RdSpsIALZ4L9a6jqUmpfig5tNGd8++
+IlzCDYIqKkrN570V12rMpmFLSRKnE8kl08t0fcy4XbLCBpBYVoIlF5aztUHEjgSz
+O2NijWuvygN2rpQWNMKoa0/a3enN5WeduRTm7/0pJvThy1k79tYNA2ti/7aMt554
+zlnXxTWYoimz/trfl9ZSBOGKY3Qv8EecKhMw4D2PuTXrUYsOR1GdJikj4nwVgGpo
+X+T+h2/yoCcxgCVcruckcmJOYMqKRuu+p5EvtRxycgC5ja7/2XrM/ywgJ33VcJXL
+ETnnmI3fSDhXKo9JdAA4mtHMLeIBHUjMu253Dyq1NmbUrEcONF6TBMhuPTM4PwI=
+=SCKn
 -----END PGP SIGNATURE-----
-
 ```
