Add auto-generated index to knowledge base

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -73,6 +73,10 @@
         "api": {
             "link": "/api/",
             "text": "API"
+        },
+        "knowledge": {
+            "link": "knowledge",
+            "text": "Knowledge Base"
         }
     },
     "foundation": {
