explain the lts naming scheme

--- a/locale/en/blog/release/v4.2.0.md
+++ b/locale/en/blog/release/v4.2.0.md
@@ -12,7 +12,7 @@ As an LTS release, support for v4.x will continue for a period of 30 months from
 
 ### Argon?
 
-To better differentiate LTS releases from regular Node.js releases, we have introduced a simple naming convention that applies only to LTS releases. The name selected for v4.2.0 is "Argon".
+To better differentiate LTS releases from regular Node.js releases, we have introduced a naming convention based on the Periodic Table of Elements that applies only to LTS releases. The name selected for v4.2.0 is "Argon", so as to be in alphabetical order by the first letter.
 
 Developers can easily determine if they are working with an LTS version of Node.js by checking the `process.release.lts` property within node. This property will be undefined in regular releases.
 
