--- a/locale/en/blog/release/v4.2.0.md
+++ b/locale/en/blog/release/v4.2.0.md
@@ -2,7 +2,7 @@
 date: 2015-10-12T18:20:40.988Z
 version: 4.2.0
 category: release
-title: Node v4.2.0 (Stable)
+title: Node v4.2.0 (LTS)
 slug: node-v4-2-0-stable
 layout: blog-post.hbs
 ---
