Add v4.2.1 armv6 binary to release blog post

--- a/locale/en/blog/release/v4.2.1.md
+++ b/locale/en/blog/release/v4.2.1.md
@@ -39,7 +39,7 @@ Linux 32-bit Binary: https://nodejs.org/dist/v4.2.1/node-v4.2.1-linux-x86.tar.gz
 Linux 64-bit Binary: https://nodejs.org/dist/v4.2.1/node-v4.2.1-linux-x64.tar.gz<br>
 SunOS 32-bit Binary: https://nodejs.org/dist/v4.2.1/node-v4.2.1-sunos-x86.tar.gz<br>
 SunOS 64-bit Binary: https://nodejs.org/dist/v4.2.1/node-v4.2.1-sunos-x64.tar.gz<br>
-ARMv6 32-bit Binary: *Coming soon*<br>
+ARMv6 32-bit Binary: http://nodejs.org/dist/v4.2.1/node-v4.2.1-linux-armv6l.tar.gz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v4.2.1/node-v4.2.1-linux-armv7l.tar.gz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v4.2.1/node-v4.2.1-linux-arm64.tar.gz<br>
 Source Code: https://nodejs.org/dist/v4.2.1/node-v4.2.1.tar.gz<br>
@@ -57,6 +57,8 @@ b242fd0fa83748d95cc3e68d14579b629960b0436d65da9d86907eef27b96fc1  node-v4.2.1-he
 b1416eca3f1c56e049d924d31b343d57a735d4e422c4288bf4c2ca453cb6bcf2  node-v4.2.1-headers.tar.xz
 05df4aeb8a53798f8b10074600518040fc317f2919f9755aeab57b0aaf7227b0  node-v4.2.1-linux-arm64.tar.gz
 ba5c0705f0d69306d978faac14ed37725b71b4e2c41192019e8e4aae239b2683  node-v4.2.1-linux-arm64.tar.xz
+6f29286464efda4a362d9464d82733398b98882051c20c0f190004480b6e506a  node-v4.2.1-linux-armv6l.tar.gz
+5a99151840df5dc2f9ec4562f6174ad06d0d52949256610e89ee8272e643cf95  node-v4.2.1-linux-armv6l.tar.xz
 fb4fbef9306962e800804ab5ba615c06bba28deb4e7a3e945a291dba986ef816  node-v4.2.1-linux-armv7l.tar.gz
 7699ee39c9bc92208ef38ab6d61ddee46cad2978b06095b2ca54a7a116c47d9a  node-v4.2.1-linux-armv7l.tar.xz
 e766e387934e17daaad92d0460ed76f756655da62b627a5c9cc07faea4a0b824  node-v4.2.1-linux-x64.tar.gz
@@ -79,13 +81,13 @@ c22fcbf2f1db7ff3cd71b4c771f277fe8d75caff8689a3be50aeee1a7682820e  win-x86/node.e
 -----BEGIN PGP SIGNATURE-----
 Comment: GPGTools - https://gpgtools.org
 
-iQEcBAEBCgAGBQJWHUJBAAoJEHNBsVwHCHesDDsH/RsDEpIXiVagPEyTsp0xPDyx
-QWYzXHY//HqLXWYazhdArCu3uehQZL/nQfa80Mmy79fZV6vP574AUjNGocqnL5Tc
-w0rXKkLyix55yevLLhlVyDIvWD7bbIeLA6+5TdlDLlUU6or+yEu7nuPh8pC4WGvE
-qQbaJPIx3xj9oHotSlw3m6FVtB2JBGEskXinjzw337395XSc5HS+UzcIxt4mOT4W
-F+0whk1tnc1eshVvFzzfIDnH753KTjU1eBtniflJLRAUiPPLymOnwqclZCTlHMol
-ERSaOkTF98eD873XoGQd7hh/N9qyHPIFY2gOLcGfUG3WHBbyo1/gz2F8P1PdtNc=
-=daVB
+iQEcBAEBCgAGBQJWHmkUAAoJEHNBsVwHCHesq4oH/1ghNOtL/4uVfHPeQtmAR/lW
++IHOHno346EpZDR0afOCTDwB+GyY5gbDdmb1CEwmFN5IstRPM4Jow6W2JwDNwOYD
+QAIzzx/+sABFJZk3iuppIUbSA6ziP/L0B8dGxel96Iq02Zf9pv3NY5sxI744SMMF
+Mr5l7/FIyb4dd9H3QiX3mxvbVj8q7Oj5e2ROlqn5mKm5HszFVhDwu1PjR5/mjazC
+EB2rRJuIwzUO3VEe6ApmQCO26yLZA/CPwl41z9oQvF+j4lHHb6DkDDX7MQu3EWd7
+hqsK2xQ6oOAzcVOP5edwYgGVH4N8hlHaHTVfFezgcri83ruMxqmRA4cYdLb3yOk=
+=dRAV
 -----END PGP SIGNATURE-----
 
 ```
