--- a/locale/en/blog/release/v4.2.1.md
+++ b/locale/en/blog/release/v4.2.1.md
@@ -10,7 +10,7 @@ layout: blog-post.hbs
 ### Notable changes
 
 * Includes fixes for two regressions
-  - Assertion error in WeakCallback  - see [#3329](https://github.com/nodejs/node/pull/3329)
+  - Assertion error in WeakCallback - see [#3329](https://github.com/nodejs/node/pull/3329)
   - Undefined timeout regression - see [#3331](https://github.com/nodejs/node/pull/3331)
 
 ### Known issues
@@ -39,7 +39,7 @@ Linux 32-bit Binary: https://nodejs.org/dist/v4.2.1/node-v4.2.1-linux-x86.tar.gz
 Linux 64-bit Binary: https://nodejs.org/dist/v4.2.1/node-v4.2.1-linux-x64.tar.gz<br>
 SunOS 32-bit Binary: https://nodejs.org/dist/v4.2.1/node-v4.2.1-sunos-x86.tar.gz<br>
 SunOS 64-bit Binary: https://nodejs.org/dist/v4.2.1/node-v4.2.1-sunos-x64.tar.gz<br>
-ARMv6 32-bit Binary: http://nodejs.org/dist/v4.2.1/node-v4.2.1-linux-armv6l.tar.gz<br>
+ARMv6 32-bit Binary: https://nodejs.org/dist/v4.2.1/node-v4.2.1-linux-armv6l.tar.gz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v4.2.1/node-v4.2.1-linux-armv7l.tar.gz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v4.2.1/node-v4.2.1-linux-arm64.tar.gz<br>
 Source Code: https://nodejs.org/dist/v4.2.1/node-v4.2.1.tar.gz<br>
