--- a/locale/en/blog/release/v5.0.0.md
+++ b/locale/en/blog/release/v5.0.0.md
@@ -199,5 +199,45 @@ Documentation: https://nodejs.org/docs/v5.0.0/api/
 Shasums (GPG signing hash: SHA512, file hash: SHA256):
 
 ```
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
 
+26f3e42df814b9b42f0b0045901c84eb79233d8196d0dcdf77a6a3c975c6f25d  node-v5.0.0-darwin-x64.tar.gz
+060d4bdf5872047ef74f3b1f3daaa466c2506e34ad916128f4b9279d005bc205  node-v5.0.0-darwin-x64.tar.xz
+5133b6145df7083133e272e1b8c96b59c58a19d004d5aacdec80ea78e58c7e46  node-v5.0.0-headers.tar.gz
+47dc88a17c416285de6c517ea6107322b65920618e8f59e1c49a83c6dd423f31  node-v5.0.0-headers.tar.xz
+2c4517d3fdefc29b5c61aa6ea3386a0dafca831357d3bcd30fc14e97b49139d1  node-v5.0.0-linux-arm64.tar.gz
+5fd1939b15406d537bf17828a707898f2d710c3c9ddf243b6070353fd13f5880  node-v5.0.0-linux-arm64.tar.xz
+96629e271e34d14bdb7be93067a8770cb5326977b9168cf2344c80a721040784  node-v5.0.0-linux-armv6l.tar.gz
+82178863010dba66076fdda215e5ad505c1b83571df1d018dce2060d24f260d7  node-v5.0.0-linux-armv6l.tar.xz
+6bf5f19cac9f01cb31b7088685d9d6df6d24c9c2a4531ace839387763b8a28ec  node-v5.0.0-linux-armv7l.tar.gz
+97575c7ec3f042acf85f9b6de3ec6db027b0ef4a828eaa5e0f66504c72884bd9  node-v5.0.0-linux-armv7l.tar.xz
+ef73b59048a0ed11d01633f0061627b7a9879257deb9add2255e4d0808f8b671  node-v5.0.0-linux-x64.tar.gz
+1c3e8e7df3320e648f748d721115e6018e0701a206232a6a7332970d211e3706  node-v5.0.0-linux-x64.tar.xz
+6484c4cac1724f2818354e3f2a8ede66308617b648cd3db624596b8cd58b5f6b  node-v5.0.0-linux-x86.tar.gz
+46a56d8c00a791f46666dd9d2401b7c26ee7ac8455762fbb106c1497867c9c4b  node-v5.0.0-linux-x86.tar.xz
+f23ca05d3d7e642ab9b0c8090b0b88fb29dec987b07d67f307bf3aef81e95b14  node-v5.0.0.pkg
+7cfbed6e6658d8304f8593eae9dd28f8f83b57e7a6345b32f4d5e9830b80203f  node-v5.0.0-sunos-x64.tar.gz
+047bd9fbb25fc6a3349781bddf5210966943b06fa62c6e275d1221613c9f3423  node-v5.0.0-sunos-x64.tar.xz
+2e9d65dff65843ebfa5c9d623c5b930bd0af7252101cc9c69c55aa8c880fa9eb  node-v5.0.0-sunos-x86.tar.gz
+c7038764010eba883b5fa638123b7b94e82b86960a0792a7b10123451d978e9a  node-v5.0.0-sunos-x86.tar.xz
+698d9662067ae6a20a2586e5c09659735fc0050769a0d8f76f979189ceaccdf4  node-v5.0.0.tar.gz
+cf4f261618e19517c8cbf2fdde00d0b5160e271760abee00f387b11a0b3ca834  node-v5.0.0.tar.xz
+8a066f8cf38f4dd979366c223d90d6242076d2446f48856abb091b2becc939ef  node-v5.0.0-x64.msi
+07826a6b60702a0ce9a77240103bf20091a06ee740e646e9f7d6ca760c64e45a  node-v5.0.0-x86.msi
+27c819be0958fdb4b63be29fb032525965e997da8e0f6b4a6e9123350b7b22e0  win-x64/node.exe
+27992ac24ab67099d243e76fc52382b42caf4bf75b4b792d647359221dfa5d0f  win-x64/node.lib
+b2a5caab041d6e0a3fefc3a0b557df71ce9174c9ca344e5a690b9accb9f76d84  win-x86/node.exe
+f79d9545ad99221d090c30e415af74431eae15c729e820a96385b051be3837f2  win-x86/node.lib
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1
+
+iQEcBAEBAgAGBQJWMom1AAoJEMJzeS99g1RdsxAIAKcA3B14sgCa6qZ1LZfXN5Qj
+hogNS6r1L6Mb15E4Gvknjej2n2At2PpdSmxPKIex2uhwGJHcidyakn3NzPwzhdJQ
+VtgQKL7G7ZhsXYrKD78kS6GdGql1u4MroTbHSACthmZv+OdDhGEmL1UIN8+PU45V
+gBDwg+JPRPYeSGzXcqOwmUHkqgvCaFvyGZfu0j18GT8TjaXkj5M8J9emtmtRBX15
+Sp9jbOMRrt9gGHmIqcx/AzCIfqGyi4Lb/CwdyD5hXWfHFfeWspsOx+RFFh965JLy
+F6Z13Zr5Oph2fdobiuXYN1WSmrHX2kfy1B2WAt80vwwVzEiIQcSUhEU9qu8z9Qg=
+=v3xU
+-----END PGP SIGNATURE-----
 ```
